--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
-  "vendor": "vtex",
-  "name": "minimumtheme",
-  "version": "0.1.1",
+  "vendor": "hiringcoders2021",
+  "name": "monsalex23",
+  "version": "0.0.1",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "assets": "0.x"
   },
   "scripts": {
     "postreleasy": "vtex publish --verbose"
@@ -30,6 +31,7 @@
     "vtex.flex-layout": "0.x",
     "vtex.rich-text": "0.x",
     "vtex.store-drawer": "0.x",
+    "vtex.store-image": "0.x",
     "vtex.locale-switcher": "0.x",
     "vtex.product-quantity": "1.x",
     "vtex.product-identifier": "0.x",
