--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,15 +1,61 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
-      "rich-text"
+     
+      "slider-layout#home",
+      "info-card#home"
+    
+    ]
+    
+
+
+  },
+  "slider-layout#home": {
+    "props": {
+      "itemsPerPage": {
+        "desktop": 1,
+        "tablet": 1,
+        "phone": 1
+      },
+      "infinite": true,
+      "showNavigationArrows": "false",
+      "blockClass": "carousel",
+      "autoplay": {
+        "timeout": 5000,
+        "stopOnHover": true
+      }
+    },
+    "children": [
+      "image#banner1",
+      "image#banner2"
     ]
   },
-  "rich-text": { 
-    "props": { 
-      "text": "VTEX Store Framework",
-      "textAlignment": "CENTER",
-      "textPosition": "CENTER",
-      "font": "t-heading-1"
+  "image#banner1": {
+    "props": {
+      "src": "assets/b1.png",
+      "alt": "Banner wood sport",
+      "width": "70%",
+      "blockClass": "banner"
+    }
+  },
+  "image#banner2": {
+    "props": {
+      "src": "assets/b2.png",
+      "alt": "Banner wood sport",
+      "width": "70%",
+      "blockClass": "banner"
+    }
+  },
+  "info-card#home": {
+    "props": {
+      "id": "info-card-home",
+      "isFullModeStyle": false,
+      "textPosition": "left",
+      "src": "assets/01.png",
+      "headline": "Black Friday",
+      "callToActionText": "PRECOMPRA",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
     }
   }
 }
