css edit + logo

--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -23,7 +23,7 @@
   "image": {
     "props": {
       "width": 100,
-      "src": "assets/Vtex-logo.jpg"
+      "src": "assets/logo2.png"
     }
   }
 }
